--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>NR Store</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../static/css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body class="antialiased">
     <div id="loadingOverlay" class="hidden">
@@ -522,7 +522,7 @@
             </div>
         </div>
     </div>
-<script src="../static/js/script.js"></script>
+<script src="script.js"></script>
     
 </body>
 </html>
